--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
             <span class="code">&#47;&gt;</span>
             </p>
         </a>
+    </section>
     <!-- END MY WORK SECTION-->
 </body>
