--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <nav id="navbar" class="nav">
         <ul class="nav-list">
         <li>
-            <a href="#welcome-section">About</a>
+            <a href="#info">Info</a>
         </li>
         <li>
             <a href="#projects">Work</a>
@@ -19,8 +19,8 @@
     </nav>
     <!-- END NAV BAR -->
     <!-- START WELCOME TITLE-->
-    <div>
-        <h2>My Name is Bryce Taylor and WELCOME to Website</h2>
+    <div id="welcome-title">
+        <h2>My Name is Bryce Taylor and Welcome to Website</h2>
     </div>
     <!-- END WELCOME TITLE-->
     <!-- START INFO SECTION-->
@@ -30,11 +30,12 @@
         alt="profile-pic"
         >
         <h2>Bryce Lynn Taylor</h2>
-        <h3><u>Contact</u>:</h3>
+        
+        <h3><u>Experienced</u>:</h3>
         <ul>
-            <li><a>GitHub</a></li>
-            <li><a>Linkin</a></li>
-            <li><a ></a></li>
+            <li>Python</li>
+            <li>HTML/CSS</li>
+            <li></li>
         </ul>
         <h3><u>Portfilo</u>:</h3>
         <p>
@@ -46,12 +47,6 @@
             together. This rolls over into Base Camp where we work as a team to complete our 
             projects.
         </p>
-        <h3><u>Experienced</u>:</h3>
-        <ul>
-            <li>Python</li>
-            <li>HTML/CSS</li>
-            <li></li>
-        </ul>
     </div>
     <!-- END INFO SECTION-->
     <!-- START MY WORK SECTION-->
@@ -93,4 +88,10 @@
         </a>
     </section>
     <!-- END MY WORK SECTION-->
+    <h3><u>Contact</u>:</h3>
+        <ul>
+            <li><a>GitHub</a></li>
+            <li><a>Linkin</a></li>
+            <li><a ></a></li>
+        </ul>
 </body>
