--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 
@@ -41,13 +42,8 @@
 <div class="title_box" id="portfolio">
     <h3 id="title"><u>Portfilo</u>:</h3>
     <p id="content">
-        My name is Bryce Taylor I am currently a student at Base Camp Coding Academy.
-        I am experienced in Python and HTML/CSS. I graduated from West Union Attendance
-        Center, I also took STEM and ICT 2 while I was in high school. I love spending
-        time with my family and friends. I also love playing video games with my friends.
-        I have learned when playing video games that it takes a team to complete a task
-        together. This rolls over into Base Camp where we work as a team to complete our
-        projects.
+        My name is Bryce Taylor I am currently a student at Base Camp Coding Academy. I am experienced in Python and HTML/CSS. I graduated from West Union Attendance Center, I also took STEM and ICT 2 while I was in high school. I love spending time with my family
+        and friends. I also love playing video games with my friends. I have learned when playing video games that it takes a team to complete a task together. This rolls over into Base Camp where we work as a team to complete our projects.
     </p>
 </div>
 <!-- END INFO SECTION-->
@@ -56,30 +52,24 @@
     <h2 class="projects-section-header">These are some of my projects</h2>
 
     <div class="projects-grid">
-        <a href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-joseph-and-bryce"
-            target="_blank" class="project project-tile">
+        <a href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-joseph-and-bryce" target="_blank" class="project project-tile">
             <img class="project-image" src="Screenshot (19).png" alt="project" />
             <p class="project-title">
-                <span class="code">&lt;</span>
-                Mad Libs Project- Python
+                <span class="code">&lt;</span> Mad Libs Project- Python
                 <span class="code">&#47;&gt;</span>
             </p>
         </a>
-        <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
-            class="project project-tile">
+        <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank" class="project project-tile">
             <img class="project-image" src="Screenshot (20).png" alt="project" />
             <p class="project-title">
-                <span class="code">&lt;</span>
-                Ndeed Project- Python/SQL
+                <span class="code">&lt;</span> Ndeed Project- Python/SQL
                 <span class="code">&#47;&gt;</span>
             </p>
         </a>
-        <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
-            class="project project-tile">
+        <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank" class="project project-tile">
             <img class="project-image" src="Screenshot(21).png" alt="project" />
             <p class="project-title">
-                <span class="code">&lt;</span>
-                My Website - HTML/CSS
+                <span class="code">&lt;</span> My Website - HTML/CSS
                 <span class="code">&#47;&gt;</span>
             </p>
         </a>
@@ -89,5 +79,7 @@
     <ul>
         <li><a>GitHub</a></li>
         <li><a>Linkin</a></li>
-        <li><a></a></li>
+        <li>
+            <a></a>
+        </li>
     </ul>
