--- a/index.html
+++ b/index.html
@@ -5,81 +5,99 @@
 
 
 <!-- START NAV BAR -->
-<nav id="navbar" class="nav">
-    <ul class="nav-list">
-        <li>
-            <a href="#info" class="box">Info</a>
-        </li>
-        <li>
-            <a href="#projects" class="box">Work</a>
-        </li>
-        <li>
-            <a href="#contact" class="box">Contact</a>
-        </li>
-    </ul>
-</nav>
-<!-- END NAV BAR -->
-<!-- START WELCOME TITLE-->
-<div id="welcome-title">
-    <h2>My Name is Bryce Taylor and Welcome to my Website</h2>
-</div>
-<!-- END WELCOME TITLE-->
-<!-- START INFO SECTION-->
-<div class="flexbox-row">
-    <div class="flexbox-column">
-        <img class="item" src="IMG_2109.JPG" alt="profile-pic">
-        <h2 class="">Bryce Lynn Taylor</h2>
-    </div>
-    <div class="title_box" id="Experienced">
-        <h3 id="title"><u>Experienced</u>:</h3>
-        <ul class="content">
-            <li>Python</li>
-            <li>HTML/CSS</li>
-            <li>SQL</li>
-        </ul>
-    </div>
-</div>
-<div class="title_box" id="portfolio">
-    <h3 id="title"><u>Portfilo</u>:</h3>
-    <p id="content">
-        My name is Bryce Taylor I am currently a student at Base Camp Coding Academy. I am experienced in Python and HTML/CSS. I graduated from West Union Attendance Center, I also took STEM and ICT 2 while I was in high school. I love spending time with my family
-        and friends. I also love playing video games with my friends. I have learned when playing video games that it takes a team to complete a task together. This rolls over into Base Camp where we work as a team to complete our projects.
-    </p>
-</div>
-<!-- END INFO SECTION-->
-<!-- START MY WORK SECTION-->
-<div id="projects" class="projects-section">
-    <h2 class="projects-section-header">These are some of my projects</h2>
 
-    <div class="projects-grid">
-        <a href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-joseph-and-bryce" target="_blank" class="project project-tile">
-            <img class="project-image" src="Screenshot (19).png" alt="project" />
-            <p class="project-title">
-                <span class="code">&lt;</span> Mad Libs Project- Python
-                <span class="code">&#47;&gt;</span>
-            </p>
-        </a>
-        <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank" class="project project-tile">
-            <img class="project-image" src="Screenshot (20).png" alt="project" />
-            <p class="project-title">
-                <span class="code">&lt;</span> Ndeed Project- Python/SQL
-                <span class="code">&#47;&gt;</span>
-            </p>
-        </a>
-        <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank" class="project project-tile">
-            <img class="project-image" src="Screenshot(21).png" alt="project" />
-            <p class="project-title">
-                <span class="code">&lt;</span> My Website - HTML/CSS
-                <span class="code">&#47;&gt;</span>
-            </p>
-        </a>
+<body>
+    <nav id="navbar" class="nav">
+        <ul class="nav-list">
+            <li>
+                <a href="#info" class="box">Info</a>
+            </li>
+            <li>
+                <a href="#projects" class="box">Work</a>
+            </li>
+            <li>
+                <a href="#contact" class="box">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <!-- END NAV BAR -->
+    <!-- START WELCOME TITLE-->
+    <div id="welcome-title">
+        <h1>My Name is Bryce Taylor and Welcome to my Website</h1>
     </div>
-    <!-- END MY WORK SECTION-->
-    <h3><u>Contact</u>:</h3>
-    <ul>
-        <li><a>GitHub</a></li>
-        <li><a>Linkin</a></li>
-        <li>
-            <a></a>
-        </li>
-    </ul>
+    <!-- END WELCOME TITLE-->
+    <!-- START INFO SECTION-->
+    <div class="flexbox-row">
+        <div class="flexbox-column">
+            <img class="item" src="IMG_2109.JPG" alt="profile-pic">
+            <h2 class="">Bryce Lynn Taylor</h2>
+        </div>
+        <div class="title_box" id="Experienced">
+            <h3 id="title"><u>Experienced</u>:</h3>
+            <ul class="content">
+                <li>Python</li>
+                <li>HTML/CSS</li>
+                <li>SQL</li>
+            </ul>
+        </div>
+    </div>
+    <div id="info">
+        <div class="title_box" id="portfolio">
+            <h3 id="title"><u>Portfilo</u>:</h3>
+            <p id="content">
+                My name is Bryce Taylor I am currently a student at Base Camp Coding Academy. I am experienced in Python
+                and
+                HTML/CSS. I graduated from West Union Attendance Center, I also took STEM and ICT 2 while I was in high
+                school. I love spending time with my family
+                and friends. I also love playing video games with my friends. I have learned when playing video games
+                that
+                it takes a team to complete a task together. This rolls over into Base Camp where we work as a team to
+                complete our projects.
+            </p>
+        </div>
+    </div>
+    <!-- END INFO SECTION-->
+    <!-- START MY WORK SECTION-->
+    <div id="projects" class="projects-section">
+        <h2 class="projects-section-header">These are some of my projects</h2>
+
+        <div class="projects-grid">
+            <a href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-joseph-and-bryce"
+                target="_blank" class="project project-tile">
+                <img class="project-image" src="Screenshot (19).png" alt="project" />
+                <p class="project-title">
+                    <span class="code">&lt;</span> Mad Libs Project- Python
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
+                class="project project-tile">
+                <img class="project-image" src="Screenshot (20).png" alt="project" />
+                <p class="project-title">
+                    <span class="code">&lt;</span> Ndeed Project- Python/SQL
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+            <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
+                class="project project-tile">
+                <img class="project-image" src="Screenshot(21).png" alt="project" />
+                <p class="project-title">
+                    <span class="code">&lt;</span> My Website - HTML/CSS
+                    <span class="code">&#47;&gt;</span>
+                </p>
+            </a>
+        </div>
+        <!-- END MY WORK SECTION-->
+        <!-- START CONTACT-->
+        <div id="contact" class="contact-section">
+            <h3><u>Contact</u>:</h3>
+            <div class="contact-links">
+                <a id="profile-link" href="https://github.com/Bryce-Taylor" target="_blank"
+                    class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
+                <a href="mailto:btaylor21@basecampcodingacademy.org" class="contact-details">
+                    <i class="fas fa-at"></i> Send an email</a>
+                <a><i class="fas fa-mobile-alt"></i> Call me: (662)544-0066</a>
+            </div>
+        </div>
+        <!-- END CONTACT-->
+</body>
