--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
         <!-- END MY WORK SECTION-->
         <!-- START CONTACT-->
         <div id="contact" class="contact-section">
-            <h3><u>Contact</u>:</h3>
+            <h2><u>Contact</u>:</h2>
             <div class="contact-links">
                 <a id="profile-link" href="https://github.com/Bryce-Taylor" target="_blank"
                     class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
                 <a href="mailto:btaylor21@basecampcodingacademy.org" class="contact-details">
                     <i class="fas fa-at"></i> Send an email</a>
-                <a><i class="fas fa-mobile-alt"></i> Call me: (662)544-0066</a>
+                <a class="contact-details"><i class="fas fa-mobile-alt"></i> Call me: (662)544-0066</a>
             </div>
         </div>
         <!-- END CONTACT-->
