Progress contact section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- END NAV BAR -->
     <!-- START WELCOME TITLE-->
     <div id="welcome-title">
-        <h1>My Name is Bryce Taylor and Welcome to my Website</h1>
+        <h1 class="projects-section-header">My Name is Bryce Taylor and Welcome to my Website</h1>
     </div>
     <!-- END WELCOME TITLE-->
     <!-- START INFO SECTION-->
