--- a/index.html
+++ b/index.html
@@ -7,18 +7,10 @@
 <!-- START NAV BAR -->
 
 <body>
-    <nav id="navbar" class="nav">
-        <ul class="nav-list">
-            <li>
-                <a href="#info" class="box">Info</a>
-            </li>
-            <li>
-                <a href="#projects" class="box">Work</a>
-            </li>
-            <li>
-                <a href="#contact" class="box">Contact</a>
-            </li>
-        </ul>
+    <nav id="navbar">
+        <a href="#info">Info</a>
+        <a href="#projects">Work</a>
+        <a href="#contact">Contact</a>
     </nav>
     <!-- END NAV BAR -->
     <!-- START WELCOME TITLE-->
