Progress on feedback

--- a/index.html
+++ b/index.html
@@ -15,27 +15,16 @@
     <!-- END NAV BAR -->
     <!-- START WELCOME TITLE-->
     <div id="welcome-title">
-        <h1 class="projects-section-header">My Name is Bryce Taylor and Welcome to my Website</h1>
+        <h1 class="projects-section-header">Bryce Taylor</h1>
     </div>
     <!-- END WELCOME TITLE-->
     <!-- START INFO SECTION-->
-    <div class="flexbox-row">
-        <div class="flexbox-column">
-            <img class="item" src="IMG_2109.JPG" alt="profile-pic">
-            <h2 class="">Bryce Lynn Taylor</h2>
-        </div>
-        <div class="title_box" id="Experienced">
-            <h3 id="title"><u>Experienced</u>:</h3>
-            <ul class="content">
-                <li>Python</li>
-                <li>HTML/CSS</li>
-                <li>SQL</li>
-            </ul>
-        </div>
+    <div class="flexbox-column">
+        <img class="item" src="IMG_2109.JPG" alt="profile-pic">
     </div>
     <div id="info">
         <div class="title_box" id="portfolio">
-            <h3 id="title"><u>Portfilo</u>:</h3>
+            <h3 id="title">Portfilo:</h3>
             <p id="content">
                 My name is Bryce Taylor I am currently a student at Base Camp Coding Academy. I am experienced in Python
                 and
@@ -46,6 +35,13 @@
                 it takes a team to complete a task together. This rolls over into Base Camp where we work as a team to
                 complete our projects.
             </p>
+            <div class="flexbox-row">
+            <h3 id="title">Skills:</h3>
+                <p><i class="fab fa-python"></i>Python</p>
+                <p><i class="fab fa-html5"></i>HTML</p>
+                <p><i class="fab fa-css3-alt"></i>CSS</p>
+                <p><i class="fas fa-database"></i>SQL</p>
+            </div>
         </div>
     </div>
     <!-- END INFO SECTION-->
@@ -58,37 +54,40 @@
                 target="_blank" class="project project-tile">
                 <img class="project-image" src="Screenshot (19).png" alt="project" />
                 <p class="project-title">
-                    <span class="code">&lt;</span> Mad Libs Project- Python
+                    <span class="code">&lt;</span> Mad Libs Project - Python  
                     <span class="code">&#47;&gt;</span>
+                    <span class="code">&lt;</span>Oct.9 2020<span class="code">&#47;&gt;</span>
                 </p>
             </a>
             <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
                 class="project project-tile">
                 <img class="project-image" src="Screenshot (20).png" alt="project" />
                 <p class="project-title">
-                    <span class="code">&lt;</span> Ndeed Project- Python/SQL
+                    <span class="code">&lt;</span> Ndeed Project - Python/SQL  
                     <span class="code">&#47;&gt;</span>
+                    <span class="code">&lt;</span>Nov. 13 2020<span class="code">&#47;&gt;</span>
                 </p>
             </a>
             <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
                 class="project project-tile">
                 <img class="project-image" src="Screenshot(21).png" alt="project" />
                 <p class="project-title">
-                    <span class="code">&lt;</span> My Website - HTML/CSS
+                    <span class="code">&lt;</span> My Website - HTML/CSS 
                     <span class="code">&#47;&gt;</span>
+                    <span class="code">&lt;</span>Dec.17 2020<span class="code">&#47;&gt;</span>
                 </p>
             </a>
         </div>
         <!-- END MY WORK SECTION-->
         <!-- START CONTACT-->
         <div id="contact" class="contact-section">
-            <h2><u>Contact</u>:</h2>
+            <h2 id="content">Contact:</h2>
             <div class="contact-links">
-                <a id="profile-link" href="https://github.com/Bryce-Taylor" target="_blank"
+                <a id="content" href="https://github.com/Bryce-Taylor" target="_blank"
                     class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-                <a href="mailto:btaylor21@basecampcodingacademy.org" class="contact-details">
+                <a  id="content" href="mailto:btaylor21@basecampcodingacademy.org" class="contact-details">
                     <i class="fas fa-at"></i> Send an email</a>
-                <a class="contact-details"><i class="fas fa-mobile-alt"></i> Call me: (662)544-0066</a>
+                <a  id="content" href="https://www.linkedin.com/in/bryce-taylor-312136200/" class="contact-details"><i class="fab fa-linkedin"></i> Linkin</a>
             </div>
         </div>
         <!-- END CONTACT-->
