Progress on Projects and contact on HTML/CSS

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link rel="stylesheet" href="index.css" type="text/css">
@@ -5,6 +6,7 @@
 
 
 <!-- START NAV BAR -->
+
 
 <body>
     <nav id="navbar">
@@ -24,7 +26,7 @@
     </div>
     <div id="info">
         <div class="title_box" id="portfolio">
-            <h3 id="title">Portfilo:</h3>
+            <h3 id="title">About Me:</h3>
             <p id="content">
                 My name is Bryce Taylor I am currently a student at Base Camp Coding Academy. I am experienced in Python
                 and
@@ -36,7 +38,7 @@
                 complete our projects.
             </p>
             <div class="flexbox-row">
-            <h3 id="title">Skills:</h3>
+                <h3 id="title">Skills:</h3>
                 <p><i class="fab fa-python"></i>Python</p>
                 <p><i class="fab fa-html5"></i>HTML</p>
                 <p><i class="fab fa-css3-alt"></i>CSS</p>
@@ -47,48 +49,76 @@
     <!-- END INFO SECTION-->
     <!-- START MY WORK SECTION-->
     <div id="projects" class="projects-section">
-        <h2 class="projects-section-header">These are some of my projects</h2>
+        <h2 class="projects-section-header">Projects</h2>
 
         <div class="projects-grid">
             <a href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-joseph-and-bryce"
                 target="_blank" class="project project-tile">
                 <img class="project-image" src="Screenshot (19).png" alt="project" />
-                <p class="project-title">
-                    <span class="code">&lt;</span> Mad Libs Project - Python  
-                    <span class="code">&#47;&gt;</span>
-                    <span class="code">&lt;</span>Oct.9 2020<span class="code">&#47;&gt;</span>
-                </p>
+                <div class="">
+                    <div class="project-title">
+                        <span class="code">&lt;</span>Mad Libs Project<span class="code">&#47;&gt;</span>
+                        <p>
+                            Randomized Mad libs program
+                        </p>
+                        <div>
+                            <span class="code">&lt;</span>Python<span class="code">&#47;&gt;</span>
+                        </div>
+                        <div>
+                            <span class="code">&lt;</span>Oct.9 2020<span class="code">&#47;&gt;</span>
+                        </div>
+                    </div>
+                </div>
             </a>
             <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
                 class="project project-tile">
                 <img class="project-image" src="Screenshot (20).png" alt="project" />
-                <p class="project-title">
-                    <span class="code">&lt;</span> Ndeed Project - Python/SQL  
+                <div class="project-title">
+                    <span class="code">&lt;</span> Ndeed Project
                     <span class="code">&#47;&gt;</span>
-                    <span class="code">&lt;</span>Nov. 13 2020<span class="code">&#47;&gt;</span>
-                </p>
+                    <p>
+                        Job Finder program 
+                    </p>
+                    <div>
+                        <span class="code">&lt;</span>Python/SQL<span class="code">&#47;&gt;</span>
+                    </div>
+                    <div>
+                        <span class="code">&lt;</span>Nov. 13 2020<span class="code">&#47;&gt;</span>
+                    </div>
+                </div>
             </a>
             <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
                 class="project project-tile">
                 <img class="project-image" src="Screenshot(21).png" alt="project" />
-                <p class="project-title">
-                    <span class="code">&lt;</span> My Website - HTML/CSS 
+                <div class="project-title">
+                    <span class="code">&lt;</span> My Website
                     <span class="code">&#47;&gt;</span>
-                    <span class="code">&lt;</span>Dec.17 2020<span class="code">&#47;&gt;</span>
-                </p>
+                    <p>
+                        Here is a code of my portfolio 
+                    </p>
+                    <div>
+                        <span class="code">&lt;</span>HTML/CSS<span class="code">&#47;&gt;</span>
+                    </div>
+                    <div>
+                        <span class="code">&lt;</span>Dec.17 2020<span class="code">&#47;&gt;</span>
+                    </div>
+                </div>
             </a>
         </div>
         <!-- END MY WORK SECTION-->
         <!-- START CONTACT-->
         <div id="contact" class="contact-section">
-            <h2 id="content">Contact:</h2>
+            <h2 id="contact-title">Contact:</h2>
             <div class="contact-links">
-                <a id="content" href="https://github.com/Bryce-Taylor" target="_blank"
-                    class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-                <a  id="content" href="mailto:btaylor21@basecampcodingacademy.org" class="contact-details">
+                <a id="contact-text" href="https://github.com/Bryce-Taylor" target="_blank" class="btn contact-details"><i
+                        class="fab fa-github"></i> GitHub</a>
+                <a id="contact-text" href="mailto:btaylor21@basecampcodingacademy.org" class="contact-details">
                     <i class="fas fa-at"></i> Send an email</a>
-                <a  id="content" href="https://www.linkedin.com/in/bryce-taylor-312136200/" class="contact-details"><i class="fab fa-linkedin"></i> Linkin</a>
+                <a id="contact-text" href="https://www.linkedin.com/in/bryce-taylor-312136200/" class="contact-details"><i
+                        class="fab fa-linkedin"></i> Linkin</a>
             </div>
         </div>
         <!-- END CONTACT-->
 </body>
+
+</html>
