--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="">
                     <div class="project-title">
                         <span class="code">&lt;</span>Mad Libs Project<span class="code">&#47;&gt;</span>
-                        <p>
+                        <p class="text">
                             Randomized Mad libs program
                         </p>
                         <div>
@@ -76,7 +76,7 @@
                 <div class="project-title">
                     <span class="code">&lt;</span> Ndeed Project
                     <span class="code">&#47;&gt;</span>
-                    <p>
+                    <p class="text">
                         Job Finder program 
                     </p>
                     <div>
@@ -93,7 +93,7 @@
                 <div class="project-title">
                     <span class="code">&lt;</span> My Website
                     <span class="code">&#47;&gt;</span>
-                    <p>
+                    <p class="text">
                         Here is a code of my portfolio 
                     </p>
                     <div>
@@ -115,7 +115,7 @@
                 <a id="contact-text" href="mailto:btaylor21@basecampcodingacademy.org" class="contact-details">
                     <i class="fas fa-at"></i> Send an email</a>
                 <a id="contact-text" href="https://www.linkedin.com/in/bryce-taylor-312136200/" class="contact-details"><i
-                        class="fab fa-linkedin"></i> Linkin</a>
+                        class="fab fa-linkedin"></i> Linkedin</a>
             </div>
         </div>
         <!-- END CONTACT-->
