--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </a>
-            <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
+            <a href="https://github.com/Bryce-Taylor/Bryce-Taylor.github.io" target="_blank"
                 class="project project-tile">
                 <img class="project-image" src="Screenshot(21).png" alt="project" />
                 <div class="project-title">
