--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
                 complete our projects.
             </p>
             <div class="flexbox-row">
-                <h3 id="title">Skills:</h3>
-                <p><i class="fab fa-python"></i>Python</p>
-                <p><i class="fab fa-html5"></i>HTML</p>
-                <p><i class="fab fa-css3-alt"></i>CSS</p>
-                <p><i class="fas fa-database"></i>SQL</p>
+                <p class="P2"><i class="fab fa-python"></i>Python</p>
+                <p class="P2"><i class="fab fa-html5"></i>HTML</p>
+                <p class="P2"><i class="fab fa-css3-alt"></i>CSS</p>
+                <p class="P2"><i class="fas fa-database"></i>SQL</p>
             </div>
         </div>
     </div>
