--- a/index.html
+++ b/index.html
@@ -1,144 +1,141 @@
+
 <html>
-<head>
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link id="style_link" rel="stylesheet" href="index.css" type="text/css">
-    <script src="script.js" defer></script>
-</head>
+    <head>
+        <title>Portfoilo</title>
+        <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+        <link id="style_link" rel="stylesheet" href="index.css" type="text/css">
+        <script src="script.js" defer></script>
+    </head>
 
-
-<!-- START NAV BAR -->
-
-
-<body>
-    <nav id="nav">
-        <a href="#info">Info</a>
-        <a href="#projects">Work</a>
-        <a href="#contact">Contact</a>
-        <button id="button" onclick="themeBackground()">Light Theme</button>
-    </nav>
-    <!-- END NAV BAR -->
-    <!-- START WELCOME TITLE-->
-    <div id="welcome-title">
-        <h1 class="projects-section-header">Bryce Taylor</h1>
-    </div>
-    <!-- END WELCOME TITLE-->
-    <!-- START INFO SECTION-->
-    <div class="flexbox-column">
-        <img class="item" src="IMG_2109.JPG" alt="profile-pic">
-    </div>
-    <div id="info">
-        <div class="title_box" id="portfolio">
-            <h3 id="title">About Me:</h3>
-            <p id="content">
-                My name is Bryce Taylor I am currently a student at Base Camp Coding Academy. I am experienced in Python
-                and
-                HTML/CSS. I graduated from West Union Attendance Center, I also took STEM and ICT 2 while I was in high
-                school. I love spending time with my family
-                and friends. I also love playing video games with my friends. I have learned when playing video games
-                that
-                it takes a team to complete a task together. This rolls over into Base Camp where we work as a team to
-                complete our projects.
-            </p>
-            <div class="flexbox-row">
-                <p class="P2"><i class="fab fa-python"></i>Python</p>
-                <p class="P2"><i class="fab fa-html5"></i>HTML</p>
-                <p class="P2"><i class="fab fa-css3-alt"></i>CSS</p>
-                <p class="P2"><i class="fas fa-database"></i>SQL</p>
-                <p class="P2">Django</p>
-                <p class="P2"><i class="fab fa-js-square"></i>Javascript</p>
+    <!-- START NAV BAR -->
+    <body class="body-dark">
+        <nav id="nav" class="nav-dark">
+            <a class="a-dark nav-a-dark target-nav" href="#info">Info</a>
+            <a class="a-dark nav-a-dark target-nav" href="#projects">Work</a>
+            <a class="a-dark nav-a-dark target-nav" href="#contact">Contact</a>
+            <button id="button" class="button-dark target-button">Light Theme</button>
+        </nav>
+        <!-- END NAV BAR -->
+        <!-- START WELCOME TITLE-->
+        <div id="welcome-title">
+            <h1 class="projects-section-header header-underline-dark target-header">Bryce Taylor</h1>
+        </div>
+        <!-- END WELCOME TITLE-->
+        <!-- START INFO SECTION-->
+        <div class="flexbox-column">
+            <img class="item" src="IMG_2109.JPG" alt="profile-pic">
+        </div>
+        <div id="info">
+            <div class="about_box about_box_dark" id="portfolio">
+                <h3 id="about">About Me:</h3>
+                <p id="content">
+                    My name is Bryce Taylor I am currently a student at Base Camp Coding Academy. I am experienced in Python
+                    and
+                    HTML/CSS. I graduated from West Union Attendance Center, I also took STEM and ICT 2 while I was in high
+                    school. I love spending time with my family
+                    and friends. I also love playing video games with my friends. I have learned when playing video games
+                    that
+                    it takes a team to complete a task together. This rolls over into Base Camp where we work as a team to
+                    complete our projects.
+                </p>
+                <div class="flexbox-row">
+                    <p class="P2"><i class="fab fa-python"></i>Python</p>
+                    <p class="P2"><i class="fab fa-html5"></i>HTML</p>
+                    <p class="P2"><i class="fab fa-css3-alt"></i>CSS</p>
+                    <p class="P2"><i class="fas fa-database"></i>SQL</p>
+                    <p class="P2">Django</p>
+                    <p class="P2"><i class="fab fa-js-square"></i>Javascript</p>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- END INFO SECTION-->
-    <!-- START MY WORK SECTION-->
-    <div id="projects" class="projects-section">
-        <h2 class="projects-section-header">Projects</h2>
-
-        <div class="projects-grid">
-            <a href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-joseph-and-bryce"
-                target="_blank" class="project project-tile">
-                <img class="project-image" src="Screenshot (19).png" alt="project" />
-                <div class="">
-                    <div class="project-title">
-                        <h3><span class="code">&lt;</span>Mad Libs Project<span class="code">&#47;&gt;</span></h3>
+        <!-- END INFO SECTION-->
+        <!-- START MY WORK SECTION-->
+        <div id="projects" class="projects-section ">
+            <h2 class="projects-section-header header-underline-dark target-header">Projects</h2>
+            <div class="projects-grid ">
+                <a href="https://github.com/BaseCampCoding/fundamentals-of-programming-pt-1-unit-project-joseph-and-bryce"
+                    target="_blank" class="project-dark a-dark background-dark project-title target-project">
+                    <img class="project-image" src="Screenshot (19).png" alt="project" />
+                    <div>
+                        <div>
+                            <h3><span class="color-dark code">&lt;</span>Mad Libs Project<span class="color-dark code">&#47;&gt;</span></h3>
+                            <p class="text">
+                                Randomized Mad libs program that provides user guided stories.
+                            </p>
+                            <div>
+                                <span class="color-dark code">&lt;</span>Python<span class="color-dark code">&#47;&gt;</span>
+                            </div>
+                            <div>
+                                <span class="color-dark code">&lt;</span>Oct.9 2020<span class="color-dark code">&#47;&gt;</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank" class="project-dark project-title a-dark background-dark target-project">
+                    <img class="project-image" src="Screenshot (20).png" alt="project" />
+                    <div>
+                        <h3><span class="color-dark code">&lt;</span> Ndeed Project
+                        <span class="color-dark code">&#47;&gt;</span></h3>
                         <p class="text">
-                            Randomized Mad libs program that provides user guided stories.
+                            Job Finder program inspired by Indeed that helps users find a job.
                         </p>
                         <div>
-                            <span class="code">&lt;</span>Python<span class="code">&#47;&gt;</span>
+                            <span class="color-dark code">&lt;</span>Python/SQL<span class="color-dark code">&#47;&gt;</span>
                         </div>
                         <div>
-                            <span class="code">&lt;</span>Oct.9 2020<span class="code">&#47;&gt;</span>
+                            <span class="color-dark code">&lt;</span>Nov. 13 2020<span class="color-dark code">&#47;&gt;</span>
                         </div>
                     </div>
-                </div>
-            </a>
-            <a href="https://github.com/BaseCampCoding/unit-project-2-bryce-and-travis-unit-project" target="_blank"
-                class="project project-tile">
-                <img class="project-image" src="Screenshot (20).png" alt="project" />
-                <div class="project-title">
-                    <h3><span class="code">&lt;</span> Ndeed Project
-                    <span class="code">&#47;&gt;</span></h3>
-                    <p class="text">
-                        Job Finder program inspired by Indeed that helps users find a job.
-                    </p>
+                </a>
+                <a href="https://github.com/Bryce-Taylor/Bryce-Taylor.github.io" target="_blank"
+                class="project-dark project-title a-dark background-dark target-project">
+                    <img class="project-image" src="Screenshot(21).png" alt="project" />
                     <div>
-                        <span class="code">&lt;</span>Python/SQL<span class="code">&#47;&gt;</span>
+                        <h3><span class="color-dark code">&lt;</span> My Website
+                        <span class="color-dark code">&#47;&gt;</span></h3>
+                        <p class="text">
+                            More details for the code in my portfoilo.
+                        </p>
+                        <div>
+                            <span class="color-dark code">&lt;</span>HTML/CSS<span class="color-dark code">&#47;&gt;</span>
+                        </div>
+                        <div>
+                            <span class="color-dark code">&lt;</span>Dec.17 2020<span class="color-dark code">&#47;&gt;</span>
+                        </div>
                     </div>
+                </a>
+                <a href="https://github.com/BaseCampCoding/django-unit-project-sean-bryce-lathe" target="_blank"
+                class="project-dark project-title a-dark background-dark target-project">
+                    <img class="project-image" src="candband.png" alt="project" />
                     <div>
-                        <span class="code">&lt;</span>Nov. 13 2020<span class="code">&#47;&gt;</span>
+                        <h3><span class="color-dark code">&lt;</span> Cand Bamp
+                        <span class="color-dark code">&#47;&gt;</span></h3>
+                        <p class="text">
+                            A website were you post songs and articles.
+                        </p>
+                        <div>
+                            <span class="color-dark code">&lt;</span>Django<span class="color-dark code">&#47;&gt;</span>
+                        </div>
+                        <div>
+                            <span class="color-dark code">&lt;</span>Mar.19 2021<span class="color-dark code">&#47;&gt;</span>
+                        </div>
                     </div>
-                </div>
-            </a>
-            <a href="https://github.com/Bryce-Taylor/Bryce-Taylor.github.io" target="_blank"
-                class="project project-tile">
-                <img class="project-image" src="Screenshot(21).png" alt="project" />
-                <div class="project-title">
-                    <h3><span class="code">&lt;</span> My Website
-                    <span class="code">&#47;&gt;</span></h3>
-                    <p class="text">
-                        More details for the code in my portfoilo.
-                    </p>
-                    <div>
-                        <span class="code">&lt;</span>HTML/CSS<span class="code">&#47;&gt;</span>
-                    </div>
-                    <div>
-                        <span class="code">&lt;</span>Dec.17 2020<span class="code">&#47;&gt;</span>
-                    </div>
-                </div>
-            </a>
-            <a href="https://github.com/BaseCampCoding/django-unit-project-sean-bryce-lathe" target="_blank"
-                class="project project-tile">
-                <img class="project-image" src="candband.png" alt="project" />
-                <div class="project-title">
-                    <h3><span class="code">&lt;</span> Cand Bamp
-                    <span class="code">&#47;&gt;</span></h3>
-                    <p class="text">
-                        A website were you post songs and articles.
-                    </p>
-                    <div>
-                        <span class="code">&lt;</span>Django<span class="code">&#47;&gt;</span>
-                    </div>
-                    <div>
-                        <span class="code">&lt;</span>Mar.19 2021<span class="code">&#47;&gt;</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <!-- END MY WORK SECTION-->
-        <!-- START CONTACT-->
-        <div id="contact" class="contact-section">
-            <h2 id="contact-title">Contact:</h2>
-            <div class="contact-links">
-                <a id="contact-text" href="https://github.com/Bryce-Taylor" target="_blank" class="btn contact-details"><i
-                        class="fab fa-github"></i> GitHub</a>
-                <a id="contact-text" href="mailto:btaylor21@basecampcodingacademy.org" class="contact-details">
-                    <i class="fas fa-at"></i> Send an email</a>
-                <a id="contact-text" href="https://www.linkedin.com/in/bryce-taylor-312136200/" class="contact-details"><i
-                        class="fab fa-linkedin"></i> Linkedin</a>
+                </a>
             </div>
-        </div>
-        <!-- END CONTACT-->
-</body>
+            <!-- END MY WORK SECTION-->
+            <!-- START CONTACT-->
+            <h2 id="contact-title">Contact:</h2>
+            <div id="contact" class="contact-section background-dark">
+                <div class="contact-links ">
+                    <a id="contact-text" href="https://github.com/Bryce-Taylor" target="_blank" class="btn contact-details contact-details-dark a-dark target-contact"><i
+                            class="fab fa-github"></i> GitHub</a>
+                    <a id="contact-text" href="mailto:btaylor21@basecampcodingacademy.org" class="btn contact-details contact-details-dark a-dark target-contact">
+                        <i class="fas fa-at"></i> Send an email</a>
+                    <a id="contact-text" href="https://www.linkedin.com/in/bryce-taylor-312136200/" class="btn contact-details contact-details-dark a-dark target-contact"><i
+                            class="fab fa-linkedin"></i> Linkedin</a>
+                </div>
+            </div>
+            <!-- END CONTACT-->
+    </body>
 
 </html>
