Edit font, links, edit about, add link to BCCA

--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
             <img class="item" src="IMG_2109.JPG" alt="profile-pic">
         </div>
         <div id="info">
-            <div class="about_box about_box_dark" id="portfolio">
+            <div class="about_box about_box_dark bcca-dark" id="portfolio">
                 <h3 id="about">About Me:</h3>
                 <p id="content">
-                    My name is Bryce Taylor I am currently a student at Base Camp Coding Academy. I am experienced in Python
-                    and
-                    HTML/CSS. I graduated from West Union Attendance Center, I also took STEM and ICT 2 while I was in high
-                    school. I love spending time with my family
-                    and friends. I also love playing video games with my friends. I have learned when playing video games
-                    that
-                    it takes a team to complete a task together. This rolls over into Base Camp where we work as a team to
-                    complete our projects.
+                    My name is Bryce Taylor. I am working towards becoming a software engineer.
+                    I graduated from West Union Attendance Center in 2020 and was then accepted
+                    into <a href="https://basecampcodingacademy.org/">Base Camp Coding Academy’s</a> Class of 2021. I have experience in Python 
+                    and HTML/CSS and am currently learning JavaScript, Java, and Spring. I am 
+                    passionate about creating websites or learning new programming languages.
+                </p>
+                <p id="content">
+                    When I’m not coding, I love spending time with my family, playing video 
+                    games with my friends, and teaching myself how to cook! 
                 </p>
                 <div class="flexbox-row">
                     <p class="P2"><i class="fab fa-python"></i>Python</p>
@@ -66,7 +67,7 @@
                                 <span class="color-dark code">&lt;</span>Python<span class="color-dark code">&#47;&gt;</span>
                             </div>
                             <div>
-                                <span class="color-dark code">&lt;</span>Oct.9 2020<span class="color-dark code">&#47;&gt;</span>
+                                <span class="color-dark code">&lt;</span>Oct: 2020<span class="color-dark code">&#47;&gt;</span>
                             </div>
                         </div>
                     </div>
@@ -83,7 +84,7 @@
                             <span class="color-dark code">&lt;</span>Python/SQL<span class="color-dark code">&#47;&gt;</span>
                         </div>
                         <div>
-                            <span class="color-dark code">&lt;</span>Nov. 13 2020<span class="color-dark code">&#47;&gt;</span>
+                            <span class="color-dark code">&lt;</span>Nov: 2020<span class="color-dark code">&#47;&gt;</span>
                         </div>
                     </div>
                 </a>
@@ -100,7 +101,7 @@
                             <span class="color-dark code">&lt;</span>HTML/CSS<span class="color-dark code">&#47;&gt;</span>
                         </div>
                         <div>
-                            <span class="color-dark code">&lt;</span>Dec.17 2020<span class="color-dark code">&#47;&gt;</span>
+                            <span class="color-dark code">&lt;</span>Dec: 2020<span class="color-dark code">&#47;&gt;</span>
                         </div>
                     </div>
                 </a>
@@ -111,13 +112,30 @@
                         <h3><span class="color-dark code">&lt;</span> Cand Bamp
                         <span class="color-dark code">&#47;&gt;</span></h3>
                         <p class="text">
-                            A website were you post songs and articles.
+                            A website were you post songs and articles. The user can also be an artist or a listner.
                         </p>
                         <div>
                             <span class="color-dark code">&lt;</span>Django<span class="color-dark code">&#47;&gt;</span>
                         </div>
                         <div>
-                            <span class="color-dark code">&lt;</span>Mar.19 2021<span class="color-dark code">&#47;&gt;</span>
+                            <span class="color-dark code">&lt;</span>Mar: 2021<span class="color-dark code">&#47;&gt;</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/BaseCampCoding/django-unit-project-sean-bryce-lathe" target="_blank"
+                class="project-dark project-title a-dark background-dark target-project">
+                    <img class="project-image" src="marsinvaders.png" alt="project" />
+                    <div>
+                        <h3><span class="color-dark code">&lt;</span> Mars Invaders
+                        <span class="color-dark code">&#47;&gt;</span></h3>
+                        <p class="text">
+                            Mars Invader is a game that represents space invaders.
+                        </p>
+                        <div>
+                            <span class="color-dark code">&lt;</span>Django<span class="color-dark code">&#47;&gt;</span>
+                        </div>
+                        <div>
+                            <span class="color-dark code">&lt;</span>Apr: 2021<span class="color-dark code">&#47;&gt;</span>
                         </div>
                     </div>
                 </a>
