--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Portfoilo</title>
-        <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
         <link id="style_link" rel="stylesheet" href="index.css" type="text/css">
         <script src="script.js" defer></script>
     </head>
@@ -44,8 +45,11 @@
                     <p class="P2"><i class="fab fa-html5"></i>HTML</p>
                     <p class="P2"><i class="fab fa-css3-alt"></i>CSS</p>
                     <p class="P2"><i class="fas fa-database"></i>SQL</p>
-                    <p class="P2">Django</p>
+                    <p class="P2"><i class="fab fa-github"></i>Git</p>
                     <p class="P2"><i class="fab fa-js-square"></i>Javascript</p>
+                    <p class="P2"><i class="fab fa-java"></i>Java</p>
+                    <p class="P2">Django</p>
+                    <p class="P2">Spring</p>
                 </div>
             </div>
         </div>
@@ -115,14 +119,14 @@
                             A website were you post songs and articles. The user can also be an artist or a listner.
                         </p>
                         <div>
-                            <span class="color-dark code">&lt;</span>Django<span class="color-dark code">&#47;&gt;</span>
+                            <span class="color-dark code">&lt;</span>Django/HTML/CSS<span class="color-dark code">&#47;&gt;</span>
                         </div>
                         <div>
                             <span class="color-dark code">&lt;</span>Mar: 2021<span class="color-dark code">&#47;&gt;</span>
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/BaseCampCoding/django-unit-project-sean-bryce-lathe" target="_blank"
+                <a href="https://github.com/Bryce-Taylor/Mars-Invader" target="_blank"
                 class="project-dark project-title a-dark background-dark target-project">
                     <img class="project-image" src="marsinvaders.png" alt="project" />
                     <div>
@@ -132,10 +136,27 @@
                             Mars Invader is a game that represents space invaders.
                         </p>
                         <div>
-                            <span class="color-dark code">&lt;</span>Django<span class="color-dark code">&#47;&gt;</span>
+                            <span class="color-dark code">&lt;</span>Django/HTML/CSS/Javascript<span class="color-dark code">&#47;&gt;</span>
                         </div>
                         <div>
                             <span class="color-dark code">&lt;</span>Apr: 2021<span class="color-dark code">&#47;&gt;</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/Bryce-Taylor/Everyday-Chore" target="_blank"
+                   class="project-dark project-title a-dark background-dark target-project">
+                    <img class="project-image" src="Screenshot_Everyday_Chore.png" alt="project" />
+                    <div>
+                        <h3><span class="color-dark code">&lt;</span> Everyday Chore
+                            <span class="color-dark code">&#47;&gt;</span></h3>
+                        <p class="text">
+                            It's a chore management system where you can check off your chores.
+                        </p>
+                        <div>
+                            <span class="color-dark code">&lt;</span>Spring/Java/HTML/CSS/Mysql<span class="color-dark code">&#47;&gt;</span>
+                        </div>
+                        <div>
+                            <span class="color-dark code">&lt;</span>Aug: 2021<span class="color-dark code">&#47;&gt;</span>
                         </div>
                     </div>
                 </a>
